--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "sc": "shadow-cljs",
     "server": "shadow-cljs stop && shadow-cljs start",
-    "start": "shadow-cljs watch app",
+    "start": "shadow-cljs watch app cards",
+    "app": "shadow-cljs watch app",
     "cards": "shadow-cljs watch cards",
     "build": "yarn clean && shadow-cljs release app",
     "test": "shadow-cljs compile test && node out/test.js",
