--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "zprint-clj": "~0.8.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.54",
     "create-react-class": "~15.6.3",
     "react": "~16.8.0",
     "react-dom": "~16.8.0"
